--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^7.4.0",
+    "@react-three/fiber": "^7.0.6",
     "framer-motion": "^4.1.17",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "three": "^0.131.3"
   },
   "devDependencies": {
     "@types/node": "^16.6.1",
     "@types/react": "17.0.17",
     "@types/styled-components": "^5.1.12",
+    "@types/three": "^0.131.0",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
